# Phoebe_2026_World-Cup_Betting_Semi_Agent

./: .gitignore  AGENTS.md  PHOEBE.md  README.md  README_EN.md  START_HERE.md  odds_snapshot.json  pyproject.toml
.sportmira/: sportmira.sqlite
.sportmira/reports/: korea-vs-czechia.md
Phoebe/: __init__.py  agent.py  cli.py  config.py  context_strategy.py  router.py  schemas.py
Phoebe/llm/: __init__.py  local_ollama.py  prompts.py  template_fallback.py
Phoebe/loops/: __init__.py  analysis_routing.py  betting_card.py  odds_ingestion.py  post_match_review.py  pre_match_research.py
Phoebe/models/: __init__.py  cards_model.py  correlation_guard.py  ev.py  market_calibrator.py  market_prior.py  poisson_goals.py  staking.py
Phoebe/odds/: __init__.py  market_normalizer.py  market_parser.py  odds_math.py  screenshot_ocr.py
Phoebe/reports/: __init__.py  evidence_log.py  markdown_report.py  memo_writer.py
Phoebe/sources/: __init__.py  base.py  football_results.py  news_preview.py  odds_public.py  referee_profile.py  registry.py  search_web.py  team_form.py  venue_weather.py  whoscored_public.py
Phoebe/storage/: db.py  migrations.py
Phoebe/utils/: confidence.py  text.py  (+2 more)
examples/: sample_match_request.md  sample_report.md
scripts/: backtest_market_calibration.py  build_context_features.py  build_match_context.py  collect_world_cup_model_data.py
tests/: test_cards_model.py  test_context_strategy.py  test_correlation_guard.py  test_market_calibrator.py  test_market_parser.py  test_odds_math.py  test_prompts.py  test_report_generation.py  test_staking.py
