[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sportmira"
version = "0.1.0"
description = "Local-first football betting research agent inspired by Mira-style evidence workflows."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "SportMira Contributors" }]
dependencies = [
  "typer>=0.12",
  "pydantic>=2",
  "requests>=2.31",
  "beautifulsoup4>=4.12",
  "lxml>=5",
  "pandas>=2",
  "numpy>=1.26",
  "scipy>=1.11",
  "rich>=13",
]

[project.optional-dependencies]
ocr = ["opencv-python>=4.9", "pytesseract>=0.3"]
browser = ["playwright>=1.44", "trafilatura>=1.8", "readability-lxml>=0.8"]
test = ["pytest>=8"]
data = ["statsbombpy>=1.13", "openpyxl>=3.1"]

[project.scripts]
sportmira = "sportmira.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["sportmira*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
